--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             <div class="stats-box-content-container">
                 <div class="stats-box-flex">
                     <div class="stat-item">
-                        <div class="number">number</div>
+                        <div class="number">$89,914</div>
                         <div class="label">of $100,000 backed</div>
                     </div>
                     <div class="stat-item">
-                        <div class="number">number</div>
+                        <div class="number">5,007</div>
                         <div class="label">total backers</div>
                     </div>
                     <div class="stat-item no-border">
